# GoL

./: CMakeLists.txt  README.md
include/: board.hpp  engine.hpp  game.hpp
src/: board.cpp  engine.cpp  game.cpp  main.cpp
